# Selling-Out

./: .gitignore  CMakeLists.txt  Makefile  README  algTests.cpp  getFiles.sh  management.cpp  management.h  manager.cpp  manager.h  market_record.cpp  market_record.h  parseData.py  player.cpp  player.h  player_interface.h  player_test.cpp  randomWords.txt  rename.sh  share.cpp  share.h  starting_algorithm.cpp  starting_algorithm.h  stock-algorithm.h  test_algorithm.h  tests.cpp
share.dSYM/Contents/: Info.plist
share.dSYM/Contents/Resources/DWARF/: share
